@@ -21,8 +21,6 @@
 #ifndef UTILS_H
 #define UTILS_H
 
-#include <stdbool.h>
-
 #include "exceptions.h"
 
 extern void initialize_utils (void);
@@ -304,7 +302,7 @@ extern pid_t wait_to_die_with_timeout (pid_t pid, int *status, int timeout);
 #endif
 
 extern int producer_is_gcc_ge_4 (const char *producer);
-extern bool producer_is_gcc (const char *producer, int *major, int *minor);
+extern int producer_is_gcc (const char *producer, int *major, int *minor);
 
 extern int myread (int, char *, int);
 
